--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="shortcut icon" type="image/x-icon" href="../static/favicon.ico" />
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 </head>
 
 <body>
+  <noscript>
+    <strong>非常抱歉，当前程序需要基于JavaScript运行，请先打开您浏览器运行JavaScript的设置后再运行该程序！</strong>
+  </noscript>
   <div id="app"></div>
 </body>
 
